--- a/translations/kangyur/placeholders/056-004_toh136-the_sutra_on_the_samadhi_of_the_four_youths.xml
+++ b/translations/kangyur/placeholders/056-004_toh136-the_sutra_on_the_samadhi_of_the_four_youths.xml
@@ -10,20 +10,22 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryacaturdārakasamādhi­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa khye'u bzhi'i ting nge 'dzin ces bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="zh">《四童子三昧經》</title>
-                <author role="translatorMain" ref="eft:team-9"/>
-                <author role="translatorEng" ref="eft:person-74">Ryan Damron</author>
-                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
-                <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
-                <editor role="reviser" ref="eft:person-312">Nicholas Schmidt</editor>
-                <editor role="reviser" ref="eft:person-59">Benjamin Collet-Cassart</editor>
-                <sponsor ref="sponsors.xml#sponsor-203">Li Yu Hua, Zhu Yuan Guo, Rachel Zhou, Grace Zhu</sponsor>
+                <author role="translatorMain" xml:id="UT22084-056-004-1"/>
+                <author role="translatorEng" xml:id="UT22084-056-004-2">Ryan Damron</author>
+                <consultant role="projectManager" xml:id="UT22084-056-004-3">Andreas Doctor</consultant>
+                <editor role="projectEditor" xml:id="UT22084-056-004-4">George FitzHerbert</editor>
+                <author role="translatorEng" xml:id="UT22084-056-004-5">Nicholas Schmidt</author>
+                <editor role="reviser" xml:id="UT22084-056-004-6">Benjamin Collet-Cassart</editor>
+                <consultant role="dharmaMaster" xml:id="UT22084-056-004-7">Chökyi Nyima Rinpoche</consultant>
+                <sponsor xml:id="UT22084-056-004-8">Li Yu Hua, Zhu Yuan Guo, Rachel Zhou, Grace Zhu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2020</date>
+                <edition>v 0.0.12 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.f">
+            <publicationStmt>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-056-004"/>
                 <date/>
             </publicationStmt>
@@ -38,20 +40,60 @@
                     <idno source-id="O1JC114941JC11720" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-17T08:52:48.392Z" user="admin">17/07/2023 08:52:48</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2020-01-16T19:43:20.628Z" user="andreas">0.0.1</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2020-01-16T19:43:20.628Z" user="andreas">2.g</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T13:00:38.22Z" user="mike">2.h</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2020-08-19T10:36:59.063Z" user="admin">0.0.2</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-07-26T05:55:43.25Z" user="cabie-sim">Auto (update-titles)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2023-05-25T09:24:05.3Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2023-05-25T09:24:05.3Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2023-05-25T09:24:59.624Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2023-05-25T09:26:32.131Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.f" date-time="2023-07-17T08:52:44.141Z" user="line-tofte">2.f</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2023-07-17T08:52:44.141Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#andreas" when="2020-01-16T19:43:20.628Z" type="text-version" status="0.0.1" xml:id="UT22084-056-004-9">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#andreas" when="2020-01-16T19:43:20.628Z" type="translation-status" status="2.g" xml:id="UT22084-056-004-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#mike" when="2020-01-27T13:00:38.22Z" type="translation-status" status="2.h" xml:id="UT22084-056-004-11">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#admin" when="2020-08-19T10:36:59.063Z" type="text-version" status="0.0.2" xml:id="UT22084-056-004-12">
+                    <desc>0.0.2</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-07-26T05:55:43.25Z" type="text-version" status="0.0.3" xml:id="UT22084-056-004-13">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-25T09:24:05.3Z" type="translation-status" status="2.g" xml:id="UT22084-056-004-14">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-25T09:24:05.3Z" type="text-version" status="0.0.4" xml:id="UT22084-056-004-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-25T09:24:59.624Z" type="text-version" status="0.0.5" xml:id="UT22084-056-004-16">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-25T09:26:32.131Z" type="text-version" status="0.0.6" xml:id="UT22084-056-004-17">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-17T08:52:44.141Z" type="translation-status" status="2.f" xml:id="UT22084-056-004-18">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-17T08:52:44.141Z" type="text-version" status="0.0.7" xml:id="UT22084-056-004-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-17T08:53:37.924Z" type="text-version" status="0.0.8" xml:id="UT22084-056-004-20">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-17T08:54:02.392Z" type="text-version" status="0.0.9" xml:id="UT22084-056-004-21">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-17T08:54:48.133Z" type="text-version" status="0.0.10" xml:id="UT22084-056-004-22">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.11" xml:id="UT22084-056-004-23">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-08T09:38:31.869Z" type="translation-status" status="2.e" xml:id="UT22084-056-004-24">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-08T09:38:31.869Z" type="text-version" status="0.0.12" xml:id="UT22084-056-004-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
