--- a/translations/kangyur/placeholders/059-013_toh170-the_sutra_of_the_questions_of_the_brahmani_srimati.xml
+++ b/translations/kangyur/placeholders/059-013_toh170-the_sutra_of_the_questions_of_the_brahmani_srimati.xml
@@ -9,17 +9,18 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">bram ze mo dpal ldan mas zhus pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryaśrīmatībrāhmaṇī­paripṛcchā­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa bram ze mo dpal ldan mas zhus pa zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" ref="eft:team-49"/>
-                <editor role="reviser" ref="eft:person-60">Benjamin Ewing</editor>
-                <author role="translatorEng" ref="eft:person-67">Lowell Cook</author>
-                <consultant role="projectManager" ref="eft:person-67">Lowell Cook</consultant>
-                <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
+                <author role="translatorMain" xml:id="UT22084-059-013-1"/>
+                <editor role="reviser" xml:id="UT22084-059-013-2">Benjamin Ewing</editor>
+                <author role="translatorEng" xml:id="UT22084-059-013-3">Lowell Cook</author>
+                <consultant role="projectManager" xml:id="UT22084-059-013-4">Lowell Cook</consultant>
+                <editor role="associateEditor" xml:id="UT22084-059-013-5">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.9 <date>2020</date>
+                <edition>v 0.0.11 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-059-013"/>
                 <date/>
             </publicationStmt>
@@ -27,9 +28,9 @@
                 <bibl key="toh170" type="text">
                     <ref>Toh 170</ref>
                     <biblScope>vol.59, ff. 307v-310v(pp.614-620)</biblScope>
-                    <author role="translatorTib">t. Śīlendrabodhi</author>
-                    <author role="translatorTib">Prajñāvarman</author>
-                    <author role="translatorTib">ye shes sde</author>
+                    <author role="translatorTib" xml:id="UT22084-059-013-21">t. Śīlendrabodhi</author>
+                    <author role="translatorTib" xml:id="UT22084-059-013-22">Prajñāvarman</author>
+                    <author role="translatorTib" xml:id="UT22084-059-013-23">ye shes sde</author>
                     <location work="UT4CZ5369" count-pages="7">
                         <volume number="59" start-page="614" end-page="620"/>
                     </location>
@@ -37,23 +38,60 @@
                     <idno source-id="O1JC114941JC11776" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-21T10:47:47.796Z" user="admin">21/02/2023 10:47:47</note>
-                <note type="updated" update="translation-status" value="4" date-time="2020-10-27T13:18:41.447Z" user="line-tofte">4</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-27T13:18:41.447Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="translation-status" value="3" date-time="2020-11-12T11:04:10.71Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-12T11:04:10.71Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2020-11-12T11:04:43.692Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2021-05-25T11:02:21.342Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2021-05-25T11:02:21.342Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2021-05-25T11:03:12.103Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2021-05-25T11:03:28.643Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2023-01-30T12:37:43.618Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-30T12:37:43.618Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-30T12:38:10.534Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.f" date-time="2023-02-21T10:47:41.974Z" user="line-tofte">2.f</note>
-                <note type="updated" update="text-version" value="0.0.9" date-time="2023-02-21T10:47:41.974Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2020-10-27T13:18:41.447Z" type="translation-status" status="4" xml:id="UT22084-059-013-6">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2020-10-27T13:18:41.447Z" type="text-version" status="0.0.1" xml:id="UT22084-059-013-7">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2020-11-12T11:04:10.71Z" type="translation-status" status="3" xml:id="UT22084-059-013-8">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2020-11-12T11:04:10.71Z" type="text-version" status="0.0.2" xml:id="UT22084-059-013-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2020-11-12T11:04:43.692Z" type="text-version" status="0.0.3" xml:id="UT22084-059-013-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-05-25T11:02:21.342Z" type="translation-status" status="2.h" xml:id="UT22084-059-013-11">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2021-05-25T11:02:21.342Z" type="text-version" status="0.0.4" xml:id="UT22084-059-013-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-05-25T11:03:12.103Z" type="text-version" status="0.0.5" xml:id="UT22084-059-013-13">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-05-25T11:03:28.643Z" type="text-version" status="0.0.6" xml:id="UT22084-059-013-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-30T12:37:43.618Z" type="translation-status" status="2.g" xml:id="UT22084-059-013-15">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-30T12:37:43.618Z" type="text-version" status="0.0.7" xml:id="UT22084-059-013-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-30T12:38:10.534Z" type="text-version" status="0.0.8" xml:id="UT22084-059-013-17">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-02-21T10:47:41.974Z" type="translation-status" status="2.f" xml:id="UT22084-059-013-18">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-02-21T10:47:41.974Z" type="text-version" status="0.0.9" xml:id="UT22084-059-013-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.10" xml:id="UT22084-059-013-20">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-08T09:51:44.859Z" type="translation-status" status="2.e" xml:id="UT22084-059-013-24">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-08T09:51:44.859Z" type="text-version" status="0.0.11" xml:id="UT22084-059-013-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
