--- a/translations/kangyur/placeholders/061-009_toh189-the_sutra_of_the_prophecy_concerning_brahmasri.xml
+++ b/translations/kangyur/placeholders/061-009_toh189-the_sutra_of_the_prophecy_concerning_brahmasri.xml
@@ -9,16 +9,17 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">tshangs pa'i dpal lung bstan pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryabrahmaśrīvyākaraṇa­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa tshangs pa'i dpal lung bstan pa zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-434">Sophie McGrath</author>
-                <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
+                <author role="translatorMain" xml:id="UT22084-061-009-1"/>
+                <author role="translatorEng" xml:id="UT22084-061-009-2">Sophie McGrath</author>
+                <editor role="projectEditor" xml:id="UT22084-061-009-3">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2019</date>
+                <edition>v 0.0.11 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.f">
+            <publicationStmt>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-061-009"/>
                 <date/>
             </publicationStmt>
@@ -33,23 +34,60 @@
                     <idno source-id="O1JC114941JC11809" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-17T08:43:18.073Z" user="admin">17/07/2023 08:43:18</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="translation-status" value="" date-time="2023-03-22T14:10:50.859Z" user="line-tofte"/>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-22T14:10:50.859Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2023-03-22T14:11:42.636Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="3" date-time="2023-04-17T07:14:53.544Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2023-04-17T07:14:53.544Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2023-04-17T07:15:28.591Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2023-05-30T15:11:40.167Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2023-05-30T15:11:40.167Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2023-06-13T14:13:38.254Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2023-06-13T14:13:38.254Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.8" date-time="2023-06-13T14:14:12.554Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.f" date-time="2023-07-17T08:43:13.805Z" user="line-tofte">2.f</note>
-                <note type="updated" update="text-version" value="0.0.9" date-time="2023-07-17T08:43:13.805Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-061-009-4">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-22T14:10:50.859Z" type="translation-status" status="" xml:id="UT22084-061-009-5">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2023-03-22T14:10:50.859Z" type="text-version" status="0.0.2" xml:id="UT22084-061-009-6">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-22T14:11:42.636Z" type="text-version" status="0.0.3" xml:id="UT22084-061-009-7">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-17T07:14:53.544Z" type="translation-status" status="3" xml:id="UT22084-061-009-8">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-17T07:14:53.544Z" type="text-version" status="0.0.4" xml:id="UT22084-061-009-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-17T07:15:28.591Z" type="text-version" status="0.0.5" xml:id="UT22084-061-009-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-30T15:11:40.167Z" type="translation-status" status="2.h" xml:id="UT22084-061-009-11">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-30T15:11:40.167Z" type="text-version" status="0.0.6" xml:id="UT22084-061-009-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-13T14:13:38.254Z" type="translation-status" status="2.g" xml:id="UT22084-061-009-13">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-13T14:13:38.254Z" type="text-version" status="0.0.7" xml:id="UT22084-061-009-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-13T14:14:12.554Z" type="text-version" status="0.0.8" xml:id="UT22084-061-009-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-17T08:43:13.805Z" type="translation-status" status="2.f" xml:id="UT22084-061-009-16">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-17T08:43:13.805Z" type="text-version" status="0.0.9" xml:id="UT22084-061-009-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.10" xml:id="UT22084-061-009-18">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-08T09:54:11.88Z" type="translation-status" status="2.e" xml:id="UT22084-061-009-19">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-08T09:54:11.88Z" type="text-version" status="0.0.11" xml:id="UT22084-061-009-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
