--- a/translations/kangyur/translations/034-015_toh27-the_perfection_of_wisdom_for_candragarbha.xml
+++ b/translations/kangyur/translations/034-015_toh27-the_perfection_of_wisdom_for_candragarbha.xml
@@ -32,7 +32,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-034-015-114">Ryan Damron</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -178,6 +178,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-08-29T12:04:19.352Z" type="text-version" status="1.0.0" xml:id="UT22084-034-015-117">
                     <desc>First published version</desc>
+                </change>
+                <change who="#andre" when="2023-09-11T20:41:45.337Z" type="text-version" status="1.0.1" xml:id="UT22084-034-015-118">
+                    <desc>Glossary matching revised - Activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -497,7 +500,7 @@
                                     the Buddha, 2023.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-034-015-41">
