--- a/translations/kangyur/placeholders/034-023_toh35-sutra_on_maitreya.xml
+++ b/translations/kangyur/placeholders/034-023_toh35-sutra_on_maitreya.xml
@@ -10,10 +10,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">[maitreyasūtra]</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.3 <date>2020</date>
+                <edition>v 0.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt>
+                <availability status="4"/>
                 <idno xml:id="UT22084-034-023"/>
                 <date/>
             </publicationStmt>
@@ -28,12 +29,24 @@
                     <idno source-id="O1JC114941JC11554" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2020-12-08T12:53:12.497Z" user="admin">08/12/2020 12:53:12</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-08-25T16:06:51.999Z" user="john">0.0.2</note>
-    <note type="updated" update="translation-status" value="4" date-time="2020-12-08T12:53:05.823Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2020-12-08T12:53:05.823Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#john" when="2020-08-25T16:06:51.999Z" type="text-version" status="0.0.2" xml:id="UT22084-034-023-1">
+                    <desc>0.0.2</desc>
+                </change>
+                <change who="#line-tofte" when="2020-12-08T12:53:05.823Z" type="translation-status" status="4" xml:id="UT22084-034-023-2">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2020-12-08T12:53:05.823Z" type="text-version" status="0.0.3" xml:id="UT22084-034-023-3">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-034-023-4">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#john" when="2023-09-15T11:41:17.405Z" type="text-version" status="0.0.5" xml:id="UT22084-034-023-5">
+                    <desc>User set version to 0.0.5</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
