--- a/translations/kangyur/placeholders/096-037_toh788,1026-the_incantation_for_calming_the_enraged.xml
+++ b/translations/kangyur/placeholders/096-037_toh788,1026-the_incantation_for_calming_the_enraged.xml
@@ -10,7 +10,8 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa khros pa zhi bar byed pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa khros pa zhi bar byed pa'i gzungs/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-037"/>
             </publicationStmt>
             <sourceDesc>
@@ -33,9 +34,19 @@
                     <idno source-id="O1JC114941JC12789" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:36:31.024Z" user="celso">23/09/2021 17:36:31</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-037-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:11:21.422Z" type="translation-status" status="3" xml:id="UT22084-096-037-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:11:21.422Z" type="text-version" status="0.0.1" xml:id="UT22084-096-037-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
