--- a/translations/kangyur/placeholders/096-042_toh793,1029-the_incantation_for_accomplishing_goals.xml
+++ b/translations/kangyur/placeholders/096-042_toh793,1029-the_incantation_for_accomplishing_goals.xml
@@ -10,7 +10,8 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">don thams cad grub pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">don thams cad 'grub pa'i gzungs/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-042"/>
             </publicationStmt>
             <sourceDesc>
@@ -33,9 +34,19 @@
                     <idno source-id="O1JC114941JC12792" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:36:38.377Z" user="celso">23/09/2021 17:36:38</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-042-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:19:33.539Z" type="translation-status" status="3" xml:id="UT22084-096-042-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:19:33.539Z" type="text-version" status="0.0.1" xml:id="UT22084-096-042-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
