--- a/translations/kangyur/placeholders/096-053_toh804,1082-incantations_for_giving_bodily_excretions_as_charity.xml
+++ b/translations/kangyur/placeholders/096-053_toh804,1082-incantations_for_giving_bodily_excretions_as_charity.xml
@@ -9,7 +9,8 @@
                 <title type="mainTitle" xml:lang="en">Dhāraṇīs for Giving Bodily Excretions as Charity</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">lus kyi zag pa sbyin par btang ba'i gzungs/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-053"/>
             </publicationStmt>
             <sourceDesc>
@@ -32,9 +33,19 @@
                     <idno source-id="O1JC114941JC12846" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:36:52.803Z" user="celso">23/09/2021 17:36:52</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-053-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:29:06.309Z" type="translation-status" status="3" xml:id="UT22084-096-053-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:29:06.309Z" type="text-version" status="0.0.1" xml:id="UT22084-096-053-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
