--- a/translations/kangyur/placeholders/097-003_toh830-the_lightning_wheel_of_magnificent_gnosis.xml
+++ b/translations/kangyur/placeholders/097-003_toh830-the_lightning_wheel_of_magnificent_gnosis.xml
@@ -10,15 +10,16 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gsang ba/ gsang ba'i mdzod chen po mi zad pa gter gyi sgron ma/ brtul zhugs chen po bsgrub pa'i rgyud/ ye shes rngam pa glog gi 'khor lo zhes bya ba theg pa chen po'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">sarvatathāgata­guhyamahā­guhya­kośākṣayanidhidīpamahā­pratapasādhanatantra­jñānāścaryadyuticakra­nāmamahāyānasūtra</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-097-003"/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh830" type="text">
                     <ref>Toh 830</ref>
                     <biblScope>vol. 97,ff. 290v-358r(pp.580-715)</biblScope>
-                    <author role="translatorTib">t. vajrvisramitra</author>
-                    <author role="translatorTib">vairocanaraksita</author>
+                    <author role="translatorTib" xml:id="UT22084-097-003-2">t. vajrvisramitra</author>
+                    <author role="translatorTib" xml:id="UT22084-097-003-3">vairocanaraksita</author>
                     <location work="UT4CZ5369" count-pages="136">
                         <volume number="97" start-page="580" end-page="715"/>
                     </location>
@@ -26,9 +27,19 @@
                     <idno source-id="O1JC114941JC12578" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:37:44 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-097-003-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:30:28.937Z" type="translation-status" status="3" xml:id="UT22084-097-003-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:30:28.937Z" type="text-version" status="0.0.1" xml:id="UT22084-097-003-5">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
